--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@internationalized/date": "^3.5.6",
+    "@nextui-org/checkbox": "^2.1.5",
     "@nextui-org/react": "^2.4.8",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
@@ -20,6 +21,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -28,10 +30,12 @@
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-responsive": "^10.0.0",
     "remi-app": "file:",
+    "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.3",
     "zod": "^3.23.8",
     "zustand": "5.0.0-rc.2"
