--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-hook-form": "^7.53.0",
     "react-responsive": "^10.0.0",
     "remi-app": "file:",
+    "sweetalert2": "^11.17.2",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.3",
     "zod": "^3.23.8",
