--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_API_URL=http://3.22.130.77/api
+NEXT_PUBLIC_JWT_SECRET_KEY ='S6gTjrZtPeIWDMcrBSzIqyyUaMgY1xpfmogjual3uIWY8sQbR-ee3Ekz4slBZZyXaJ8icieKR5dIQQfeaqqom5N2eHuWp-QaITB2dqBWYBPeemWWuvxFEcES
+'
