--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^11.11.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.447.0",
@@ -42,6 +43,7 @@
     "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
