--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-spring/web": "^9.7.5",
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
@@ -30,6 +31,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.447.0",
     "next": "15.1.5",
+    "ogl": "^1.0.11",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
