--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cmdk": "^1.0.0",
     "crypto-js": "^4.2.0",
     "framer-motion": "^11.11.1",
+    "gsap": "^3.12.7",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.447.0",
     "next": "15.1.5",
